# mvp-poc

./: .gitignore  package-lock.json  package.json  readme_mine.md
backend/: db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/tasks/: models.py  serializers.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_task_user.py
mvp_poc/: README.md  package-lock.json  package.json
mvp_poc/src/: App.jsx  dark-mode.css  index.js
mvp_poc/src/components/: LoginPage.jsx  ScheduledTasks.jsx  Sidebar.jsx  Status.jsx  TaskListPage.jsx  TriggerTasks.jsx
mvp_poc/src/utils/: authUtils.js
src/: App.jsx  index.js
src/components/: LoginPage.jsx
